2009-02-06 Alexander Malysh <amalysh at kannel.org>
    * test/test_hmac.c, test/test_md5.c, test/test_octstr_dump.c, test/test_regex.c:
      applied patch that fixes segfaults.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for patch.
      [Msg-ID: <498C3EE0.4030408@telemaque.fr>]

2009-02-06 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: fixed some memory leaks.

2009-02-04  Stipe Tolj  <stolj at kannel.org>
    * README: add the documentation requirement packages for Fedora Core too.
    
2009-02-04  Stipe Tolj  <stolj at kannel.org>
    * test/test_octstr_format.c: fix intendion according to our CodingStyle
      policy. NLC.

2009-01-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: this patch should fix #460.
      Changed %lu -> %llu in octstr_format call when strtoll is used.

2009-01-29 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c, test/test_octstr_format.c: applied patch that adds
      support for %llu, %llx etc. to octstr_format. Also added test.
      Thanks to Nikos Balkanas <nbalkanas at gmail.com> for patch.
      [Msg-Id: <7f4386bc0901290255y3f8f44feya6132b138b0b6003@mail.gmail.com>]

2009-01-26  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fix the recover_absolute_uri() to handle HTTPS connections
      to port 80 too, via applying the port 80 to the URL scheme if the
      connection IS SSL-enabled. Thanks to Martin for the vetoing.
      [Msg-Id: <92cf04420901251835k5f0636acueafdfd17f8147355@mail.gmail.com>]
       
2009-01-25  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: add function recover_absolute_uri() to handle partly
      incomplete absoluteURI values in redirect HTTP headers.
      [Msg-Id: <4979FB14.2000600@tolj.org>]
  
2009-01-21 Alexander Malysh <amalysh at kannel.org>
    * utils/makedist: added sha1 digest for packages.

2009-01-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed panic due to the unsupported %llu